M      median3.mexw64
M      AmapMex.mexw64
M      eikonal3.mexw64
M      median3.mexglx
M      vbdist.mexw64
M      down_cut01.c

(1) Modified check for bllod vessels in GBM.m, that occasionally caused
    problems.
(2) Corrected use of FLT_MIN and FLT_MAX in some c-functions.
(3) Recompiled mex-files.
------------------------------------------------------------------------
r407 | gaser | 2011-04-13 16:46:45

M      median3.mexa64
M      median3.mexw32
M      median3.c
M      median3.mexmaci64
M      median3.mexmaci
M      median3.mexw64
M      median3.mexglx

Removed debug output from median3.c.
------------------------------------------------------------------------
r408 | gaser | 2011-04-13 17:27:39

M      cg_vbm8_defs.m

Removed bug in cg_vbm8_defs.m, where the output path was not defined.
------------------------------------------------------------------------
r409 | gaser | 2011-04-14 08:08:29

M      GBM.m

Some changes to GBM.m to better deal with blood vessels.
------------------------------------------------------------------------
r410 | gaser | 2011-04-14 13:57:32

M      cg_vbm8_run.m

Call of spm_check_version in cg_vbm8_run.m is now applied using "try".
------------------------------------------------------------------------
r411 | gaser | 2011-04-14 15:37:57

M      cg_vbm8_write.m
M      cg_spmT2x.m

(1) Removed debugging code in cg_spmT2x.m.
(2) Removed changes from r410 in GBM.m.
------------------------------------------------------------------------
r412 | gaser | 2011-05-02 17:58:45

M       Contents_info.txt
M       Makefile.vbm
A       INSTALL_info.txt
D       spm_max_nS.m

(1) Updated Contents.m and added missing INSTALL.txt.
(2) Removed spm_max_nS.m.
------------------------------------------------------------------------
r413 | gaser | 2011-05-02 21:34:57

M      GBM.m

Corrected out of range warning in GBM.m.
------------------------------------------------------------------------
r414 | gaser | 2011-05-03 15:21:26